syntax = "proto3";

package hello;

import "google/api/annotations.proto";

option go_package = "./pb";

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse){
        option (google.api.http) = {
            get: "/v1/hello/{Name}"
        };
    }
}

message HelloRequest {
    string Name = 1;
}

message HelloResponse {
    string Message = 1;
}